AX: Whitespace-only aria-labels should not be respected in accname calculation https://bugs.webkit.org/show_bug.cgi?id=272852 rdar://problem/126643869

Reviewed by Chris Fleizach.

https://w3c.github.io/accname/#comp_label

> AriaLabel: Otherwise, if the current node has an aria-label attribute whose value is not undefined, not the empty string, nor, when trimmed of whitespace, is not the empty string:
>  1. If traversal of the current node is due to recursion and the current node is an embedded control, ignore aria-label and skip to rule Embedded Control.
>  2. Otherwise, return the value of aria-label.

With this patch, we no longer respect whitespace-only aria-labels when computing the accname.

This patch also de-virtualizes AccessibilityObject::getAttribute and AccessibilityObject::hasAttribute, as the only
override was in AccessibilitySlider and was not necessary.

* LayoutTests/imported/w3c/web-platform-tests/accname/name/comp_label-expected.txt:
* LayoutTests/platform/gtk/imported/w3c/web-platform-tests/accname/name/comp_label-expected.txt:
* Source/WebCore/accessibility/AccessibilityImageMapLink.cpp:
(WebCore::AccessibilityImageMapLink::description const):
* Source/WebCore/accessibility/AccessibilityListBoxOption.cpp:
(WebCore::AccessibilityListBoxOption::stringValue const):
* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::determineAccessibilityRoleFromNode const):
(WebCore::AccessibilityNodeObject::ariaAccessibilityDescription const):
(WebCore::AccessibilityNodeObject::textAsLabelFor const):
(WebCore::AccessibilityNodeObject::labelText const):
(WebCore::AccessibilityNodeObject::alternativeText const):
(WebCore::AccessibilityNodeObject::stringValue const):
(WebCore::accessibleNameForNode):
(WebCore::AccessibilityNodeObject::hasAttributesRequiredForInclusion const):
(WebCore::AccessibilityNodeObject::determineAriaRoleAttribute const):
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::getAttribute const):
(WebCore::AccessibilityObject::getAttributeTrimmed const):
* Source/WebCore/accessibility/AccessibilityObject.h:
(WebCore::AccessibilityObject::hasValidAriaLabel const):
* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::stringValue const):
* Source/WebCore/accessibility/AccessibilitySlider.cpp:
(WebCore::AccessibilitySlider::getAttribute const): Deleted.
* Source/WebCore/accessibility/AccessibilitySlider.h:
* Source/WebCore/dom/Element.h:
* Source/WebCore/dom/ElementInlines.h:
(WebCore::Element::attributeTrimmedWithDefaultARIA const):

Canonical link: https://commits.webkit.org/277781@main